changing the email

--- a/index.html
+++ b/index.html
@@ -760,8 +760,8 @@
             <!-- Contact -->
             <div class="footer-col" style="margin: 0 20px; text-align: left;">
                 <h4 style="margin-bottom: 5px; font-size: 14px;">Contact</h4>
-                <p style="margin: 0;">email@example.com</p>
-                <p style="margin: 0;">(555) 555-5555</p>
+                <p style="margin: 0;">admin@curvelab.ai</p>
+                <p style="margin: 0;">(+971)559172505</p>
             </div>
         </div>
         
